--- a/templates/en/AudumbarTemple.html
+++ b/templates/en/AudumbarTemple.html
@@ -17,72 +17,76 @@
 		<section class="datta-main-section">
 			<div>
 				<div class='caption caption-img align-left data-img'>
-					<img alt='नृसिंहवाड़ी'
-					src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/shree_sketra_audumber_datta_mandeer01.jpg">
-					<figcaption class="figncaption">श्री क्षेत्र औदुम्बर दत्ता मंदिर</figcaption>
-					</div>
-					<h3>श्री क्षेत्र ऑडंबर&nbsp;</h3>
-					<p>नरसिंह-सरस्वतीनी का जन्मस्थान वरहादतला है; लेकिन उन्होंने कृष्णकठ को अपनी कर्मभूमि बना लिया।
-					कृष्ण काठी औदुम्बर और नरसोबाची वाडी दोनों ही उनकी वास्तविक, तपस्या और लोकोधारा क्रियाएं हैं।
-					पवित्र स्थान बनाए गए हैं। एल्तिरावर भीलवाड़ी है और पलेटिरावर नदी का औदुम्बर क्षेत्र है
-					कृष्णा
-					अहा। सांगली से वह बसने के लिए औदुम्बराट पहुँचता था। रहने का इंतजाम हो सकता है
-					और जीवित। के अलावा
-					गांव में धर्मशालाएं हैं।</p>
-					<p>श्री नरसिंहसरस्वती को श्री दत्तात्रेय का दूसरा अवतार माना जाता है। बढ़ाने के लिए
-					उनकी गर्मी,
-					शास्त्रों और ज्ञान के प्रभाव से महाराष्ट्र का दत्त संप्रदाय सर्वत्र फैल गया। उनका
-					यह कार्य इतना महान है कि लोग उन्हें दत्त संप्रदाय का प्रवर्तक मानते हैं। 1441 में ऑडुम्बर
-					चातुर्मासत यहां का असली केला है, इसलिए औदुम्बर विशेष रूप से महाराष्ट्र दत्तस्थान के नाम से प्रसिद्ध है
-					पावले। भुवनेश्वरी देवी मंदिर के पास कृष्णा का पलेतिरावर अंकलखोप गांव और एल्तिरावर भीलवाड़ी
-					अहा। क्योंकि भुवनेश्वरी एक शक्तिपीठ है या मोहल्ले में तपस्वी लोग हमेशा करते थे
-					टहल लो। कृष्ण के तीर
-					वृक्षों के जाल के कारण एकांत तपोवन स्वतः ही निर्मित हो जाता। या प्रकृति
-					सिद्ध तपोवनत औदुम्बरच्य दत
-					शीतल छायेत नरसिंहसरस्विनी ने एक चतुर्मासच काल बिताया और शाश्वत पवित्रता प्राप्त की।
-					करुण दिले।</p>
+					<img alt='Nrusinghwadi'
+						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/shree_sketra_audumber_datta_mandeer01.jpg">
+					<figcaption class="figncaption">Sri Kshetra Audumbar Datta Temple</figcaption>
+				</div>
+				<h3>Mr. Area Audumber&nbsp;</h3>
+				<p>The birthplace of Narasimha-Saraswini is Varahtala; But he made Krishnakath his workplace.
+					Both Krishna Kathi Audumbar and Narsobachi Wadi are his genuine, penance and Lokodhara activities.
+					The holy place has been created. Bhilwadi is on Altira and Audumber area is on Paletira river
+					Dark woman
+					Oh, he used to reach Udumber by bus from Sangli. accommodation can be arranged
+					and besides the living
+					There are dharamshalas in the village.</p>
+				<p>Shri Narasimhasaraswati is considered to be the second incarnation of Shri Dattatreya. to increase
+					their heat,
+					Due to the influence of scriptures and knowledge, the Datta sect of Maharashtra spread everywhere.
+					His
+					This work is so great that people consider him the founder of the Datta sect. 1441 in Audumber
+					Why Chaturmasat is situated here, that's why Audambara is specially known as Maharashtra Dattasthan
+					Unclekhop Village on Paletira of Krishna near Kadam Bhuvaneshwari Devi Temple and Bhilwadi on Eltira
+					Aha Bhuvaneshwari being a Shaktipeeth, people used to do penance in this locality.
+					walk krishna's arrow
+					It is due to the movement of trees that solitary Tapovan is formed. this nature
+					siddha tapovanat audumbrachya dat
+					Narasimha Saraswini spent only one chaturmas in the cool shade and attained eternal purity.
+					Compassionate.</p>
 
-					<div role="group" class="caption caption-img align-left data-img">
-						<img alt="64 योगिनी पूजा"
+				<div role="group" class="caption caption-img align-left data-img">
+					<img alt="64 Yogini Puja"
 						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/audumber_datta_mandeer01_0.jpg">
-						<figcaption class="figncaption">श्री क्षेत्र औदुम्बर दत्ता मंदिर</figcaption>
-						</div>
-						<p>या पवित्र वातावरण में कृष्ण के पवित्र बर्तन में स्नान करें और श्री के दर्शन करें
-						दत्तपादुका।
-						यह स्नान घाट पक्का है।</p>
-						<p>आप मुझसे ईर्ष्या करते हैं, मैं बहुत खुश हूं, आप वंदिता श्रीकृष्णमाई की आभारी हैं!<br>
-						असि कृष्णमैचि मनोमन, प्रार्थना करो और शुद्ध होकर दत्तदर्शनालय जाओ। सीधे से
-						घाटा
-						पादुकाम तक चलता रहता है। सहजानंदस्वामी, हा घाट पर ब्रह्मानंदस्वामी के शिष्य, से
-						भक्तों
-						उन्होंने विसावा शताब्दी की शुरुआत में वित्तीय सहायता एकत्र करके बांधों का निर्माण किया।</p>
-						<p>दत्ता के चरणों के दर्शन करने के बाद, मैं प्रदक्षिणा करने लगा, गुरुचरित्र का पाठ,
-						दत्ता भक्त।
-						करित करते हुए आसवन करें। दत्त संप्रदाय में कठोर तपस्याओं का बहुत महत्व है। बहुत ज़्यादा
-						कंजूस शिष्टाचार
-						साम्प्रदायिकतावादियों की यह आस्था है कि साक्षात्कार को मानने वालों की पहुँच होनी चाहिए।
-						गोरक्षनाथ, चांगदेवरौल,
-						जनार्दनस्वामी, एकनाथ, दासोपंत, निरंजन रघुनाथ आदि थोर दत्त भक्तों के नाम स्मरण करते हैं
-						तपस्या का इतिहास, खुद को नमन।</p>
-						<p>नरसिंह सरस्वती उस स्थान पर चार महीने से एकांतवास का आनंद ले रहे होंगे।
-						चरित्र और शिक्षाओं के बारे में सोचने का औचित्य है। इसलिए स्वत: तपाला
-						दोस्ताना मानसिक बैठक
-						लाभ।</p>
-						<div role="group" class="caption caption-img align-left data-img">
-						<img alt="64 योगिनी पूजा"
+					<figcaption class="figncaption">Sri Kshetra Audumbar Datta Temple</figcaption>
+				</div>
+				<p>Bathe in the holy pot of Krishna in this holy environment and have darshan of Shri
+					Dattapaduka
+					This bathing ghat is of concrete.</p>
+				<p>You live with me, I am very happy, you are grateful to Vandita Srikrishnamai!<br>
+					Asi krishnamachi manoman, pray and become pure and go to Datta Darshanalay. direct sec
+					range of mountains
+					Padukam continues to work. On this ghat Brahmanandswami's disciple Sahajanandswami, Sec.
+					Devotees
+					They built dams by collecting financial support in the early twentieth century.</p>
+				<p>After seeing the feet of Datta, I started circumambulating the path of Guru Charitra,
+					Datta Bhakta.
+					Distill while doing. Rigorous penance is of great importance in the Datta sect. very much
+					stingy manners
+					Nonconformists believe that revelation should be accessible to believers.
+					Gorakshanath, Changdevraul,
+					Janardanaswamy, Eknath, Dasopant, Niranjan Raghunath etc. mention the names of great Datta devotees.
+					History why austerity, self-respect.</p>
+				<p>Narasimha Saraswati must have been enjoying seclusion at that place for four months.
+					There is reason to think about character and punishment. so check yourself
+					a friendly mental meeting
+					benefits.</p>
+				<div role="group" class="caption caption-img align-left data-img">
+					<img alt="64 Yogini Puja"
 						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/audumber_datta_mandeer_parisar_shreenchi_murti0_0.jpg">
-						<figcaption class="figncaption">औदुम्बर दत्ता मंदिर परिसर श्रींची मूर्ति</figcaption>
-						</div>
-						<p>मंदिर के परिसर में गूलर के पेड़ की घनी छाया है। जमीन पर छाया जबकि
-						सूर्य आकाश में अस्त हो रहा है - प्रकाशाची
-						जालीदार रंगोली तरल रहती है। या औदुम्बरांचा छायाएं मंदिरप्रदक्षिणा करुणा, अपर 'अजोबा'
-						वडखलचाय
-						वतेने गेले की, ब्रह्मानंदस्वमिंच गणित कोस्तो। हे सज्जन सन् 1826 के आसपास गिरनारहूं औदुम्बरक्षेत्री
-						उन्होंने इधर-उधर मुठ्ठी उठाकर तपस्या की। या उनके शांत, खुश और पवित्र वातावरण में
-						तपला सिद्धि ने प्रसिद्धि प्राप्त की और अंत में उन्होंने यहाँ समाधि ले ली। उनके साथ मेरु शास्त्री नाचे
-						विद्वान गृहस्थ होता। उन्होंने मदद से 'हठयोगप्रदीपिका' या योग शास्त्र लिखे
-						ब्रह्मानंदच्य का।
-						प्रसिद्ध संस्कृत पुस्तक 'ज्योत्सना' नवाची टीका लिहिलि।</p>
+					<figcaption class="figncaption">Audumbar Datta Temple Complex Sri Chi Murchi</figcaption>
+				</div>
+				<p>The area around the temple has dense shade of sycamore trees. while the shadow is on the ground
+					the sun is setting in the sky - of light
+					Jalidaar Rangoli remains liquid. The shadows of these Audumbaras around the temple are compassion,
+					immense 'Ajoba'.
+					vadakhalchai
+					After going to Baate, Brahmanand Swami asked maths. This gentleman Girnarhu Audumbarkshetri around
+					1826
+					He raised his fist here and there and did penance. Come to their peaceful, happy and holy
+					environment
+					Tapala Siddhi attained fame and finally he took samadhi here. Meru Shastri danced with her
+					He was a learned gentleman. He composed the Yoga scripture 'Hatha Yoga Pradipika' with the help of
+					Why Brahmanand?
+					Wrote criticism of the famous Sanskrit text 'Jyotsana'.</p>
 				<p>Brahmanand's disciple Sahajanand Swami collected Vargani from the devotees and paved the way for
 					Audumbarcha.
 					The courtesy of tying bananas. or Brahmananda Mathatach Srivasudevanandasaraswati (an archaic of the
