--- a/templates/en/BasavKalyanTemple.html
+++ b/templates/en/BasavKalyanTemple.html
@@ -23,7 +23,7 @@
 					<figcaption class="figncaption">Basavkalyan Kshetra </figcaption>
 				</div>
 				<h3>Shri Kshetra Basavakalyan</h3>
-				<p>Basavakalyan is 110 km from Solapur. m. अंपर्ड हिबरद मर्ग सास्तापूर फट्याnear aahe. This is a very
+				<p>Basavakalyan is 110 km from Solapur. This is a very
 					ancient such Shridatta area. Or Mandirala Bhuyari Samadhi Temple would be called like this. Or the
 					Datta sect is called the Ananda sect.</p>
 				<p>It is told that after the end of Dwaparayuga, when Kaliyuga started, the five Pandavas along with
