--- a/templates/en/KaranjiTemple.html
+++ b/templates/en/KaranjiTemple.html
@@ -16,37 +16,36 @@
 <body>
 	<main>
 		<section class="datta-main-section">
-			<दिव>
+			<div>
 				<div class='caption caption-img align-left data-img'>
-					<img alt='ग श्रीदत्तप्रभूंच आजोल (महर्षि कर्दमुनिंचा आश्रम) करंजी'
+					<img alt='ग श्रीदत्तप्रभूंच आजोल (Maharishi Kardammunincha Ashram) Karanji'
 						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Karanji/karanji-1.jpg">
-					<figcaption class=" figncaption">सी श्रीदत्त प्रभुंच आजोल (महर्षि कर्दमुनिंचा आश्रम)
-						करणजी</figcaption>
+					<figcaption class=" figncaption">C Shridatta Prabhuncha Aajol(Maharishi Kardammunincha Ashram)
+						Karanji</figcaption>
 				</div>
-				<h3>करणजी का 'श्रीदत्त प्रभुंच आगोल'</h3>
-				<p>महर्षि अत्रि और महापतिव्रता के पुत्र त्रेतायुगत मार्गशीर्ष पूर्णिमा के मध्य में
-					साध्वी अनसूया ने भगवान श्रीदत्तात्रेयणी का अवतार ग्रहण किया। महर्षि भृगु ज्येष्ठ पुत्र हैं
-					ब्रह्मदेव के चार मानस पुत्रों में दूसरे महर्षि अंगिरस, तीसरे महर्षि अत्रि और
-					चतुर्थ महर्षि वैखानस ! महर्षि अत्रि और महर्षि अंगिरस का स्थान माना जाता है
-					सप्तर्षिमादेही का। कर्दमुनि और देवहुति की सुकन्या, श्री लक्ष्मी की माता के पुत्र, अर्थात्
-					महर्षि अत्रिंचि की पत्नी महासाध्वी माता अनसूया ! अत्रिमुनि के ज्ञान, तपस्या की शक्ति और
-					वैराग्य, कर्दमुनि-देवहुतिहि उनसे प्रसन्न हुए और उन्हें अपनी अनसूया या सौन्दर्यवती-सुशील प्राप्त हुई
-					पुत्री का विवाह अत्रिमुनि से हुआ। 'अनसूया' का अर्थ है 'बिना असूया'! अश्या या महान सती श्री
-					अनसुयेचन माहेर का अर्थ है श्री दत्त प्रभुंच आगोल (महर्षि कर्दमुनि का आश्रम)। डिंडोरी के पास
-					'करणजी' या गवी, दंडकर्ण का एक बहुत ही सुरम्य परिसर, नासिक-वाणी रोड के पार! पर
-					वणिकड़े का रास्ता, ओझरखेड बांध बाईं ओर है और मुख्य सड़क से केवल 3-4 किमी दूर है
-					दाहिनी ओर पवित्र स्थान है। यलाच को 'निर्जल मठ' आसनही कहा जाता है। पराशर, मार्कण्डेय, कण्व वा
-					तपस्वी महर्षि के इस क्षेत्र में आश्रम रहे होंगे। 'सिद्धाना कपिलो मुनिः' के रूप में वर्णित है
-					'सिद्धानां कपिलो मुनिः', क्योंकि कपिल मुनि ने स्थानीय तपस्या नहीं की थी।</p>
-				<p>श्रीदत्त प्रभुंची पद्मासन की मूर्ति कहीं और नहीं मिलती है और यहां केवल एक ही मूर्ति मिलती है
-					भारत। गंगमेन के श्रीदत्त प्रभु की वास्तविक मूर्ति श्री शिवदयाल को प्रसाद के रूप में दी गई है
-					स्वामी ने यहां तपस्या की थी। मंदिर के मध्य भाग में देवघराट के मध्य में एक है
-					केवल एक ऊंचाई की शुद्ध सफेद मूर्ति।</p>
-				<p>यहां एक और आश्चर्य की बात यह है कि पहाड़ा मितालन के क्षेत्र में सभी कुत्ते दोपहर 12 बजे इकट्ठा होते
-					हैं
-					अर्टिला देवलछाया का गर्भ और आरती के बाद चले जाना।</p>
+				<h3>Karanji's 'Shridatta Prabhuncha Aagol'</h3>
+				<p>Throughout the middle of Tretayugat Margashirsha Purnima, the son of Maharishi Atri and Mahapativrata
+					Sadhvi Anasuya assumed the incarnation of Lord Sridattatreyani. Maharishi Bhrigu is the eldest son
+					among the four Manas sons of Brahmadev, the second Maharishi Angiras, the third Maharishi Atri and
+					the fourth Maharishi Vaikhanas! Maharishi Atri and Maharishi Angiras are considered to be the place
+					of Saptarshimadhehi. Kardammuni and Devahuti's Sukanya, the son of Sri Lakshmi's mother, that is
+					Maharishi Atrinchi's wife Mahasadhvi Mata Anasuya! Seeing Atrimuni's knowledge, power of penance and
+					quietness, Kardammuni-Devahutihi was pleased with him and got his Anasuya or Saundaryavati-Susheel
+					daughter married to Atrimuni. 'Anasuya' means 'without Asuya'! Ashya or the great sati Shree
+					Anasuyechan Maher means Shree Datta Prabhuncha Aagol (Maharshi Kardammuni's ashram). Dindori near
+					'Karanji' or Gavi, a very picturesque complex of Dandakarna, just across the Nashik-Vani road! On
+					the way to Vanikde, Ozharkhed Dam is on the left side and only 3-4 km from the main road on the
+					right side is the holy place. Yalach is called 'Nirjal Math' Asanhi. Parashar, Markandeya, Kanva or
+					ascetic Maharishi would have had ashrams in this area. 'Siddhaana Kapilo MuniH' is described as
+					'Siddhaanaan Kapilo MuniH', because Kapila Muni did not do local penance.</p>
+				<p>Shridatta Prabhunchi Padmasan's idol is not found anywhere else and only one idol is found here in
+					India. The actual idol of Sridatta Prabhun of Gangamain has been given as Prasad to Sri Shivdayal
+					Swami who did penance here. In the center of the temple, in the center of the Devgharat, there is a
+					pure white idol of only one height.</p>
+				<p>Another surprise here is that all the dogs in the area of Pahayala Mitalan gather at 12 noon at
+					Artila Devlachaya's womb and go away after the Aarti.</p>
 
-				</div>
+			</div>
 		</section>
 	</main>
 </body>
