--- a/templates/hn/AudumbarTemple.html
+++ b/templates/hn/AudumbarTemple.html
@@ -21,12 +21,12 @@
 						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/shree_sketra_audumber_datta_mandeer01.jpg">
 					<figcaption class="figncaption">श्री क्षेत्र औदुम्बर दत्ता मंदिर</figcaption>
 				</div>
-				<h3>श्री क्षेत्र ऑडंबर&nbsp;</h3>
+				<h3>श्री क्षेत्र औदुम्बर&nbsp;</h3>
 				<p>नरसिंह-सरस्वतीनी का जन्मस्थान वरहादतला है; लेकिन उन्होंने कृष्णकठ को अपनी कर्मभूमि बना लिया।
 					कृष्ण काठी औदुम्बर और नरसोबाची वाडी दोनों ही उनकी वास्तविक, तपस्या और लोकोधारा क्रियाएं हैं।
 					पवित्र स्थान बनाए गए हैं। एल्तिरावर भीलवाड़ी है और पलेटिरावर नदी का औदुम्बर क्षेत्र है
 					कृष्णा
-					अहा। सांगली से वह बसने के लिए औदुम्बराट पहुँचता था। रहने का इंतजाम हो सकता है
+					अहा। सांगली से वह बसने के लिए औदुम्बर पहुँचता था। रहने का इंतजाम हो सकता है
 					और जीवित। के अलावा
 					गांव में धर्मशालाएं हैं।</p>
 				<p>श्री नरसिंहसरस्वती को श्री दत्तात्रेय का दूसरा अवतार माना जाता है। बढ़ाने के लिए
@@ -101,7 +101,7 @@
 						src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Audumbar/narayanand-swami_audumbar_0.jpg">
 					<figcaption class="figncaption">नारायणन्द सरस्वती स्वामी महाराज औदुम्बर</figcaption>
 				</div>
-				<p><strong>कृष्णतिरिचिया वसयाने। ये औदुम्बरी के रहने वाले हैं। ध्र।<br>
+				<p><strong>कृष्णतिरिचिया वसयाने। ये औदुम्बरी के रहने वाले हैं। मिस्टर <br>
 						इच्छा। चप्पल पहनने वाले मिले। 1. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>
 						भस्म करने वाले। दंड पाने वाले कमण्डलु। 2. &nbsp; &nbsp; &nbsp; &nbsp;
