--- a/templates/en/NashikRoadTemple.html
+++ b/templates/en/NashikRoadTemple.html
@@ -16,57 +16,56 @@
 <body>
 	<main>
 		<section class="datta-main-section">
-			<दिव>
+			<div>
 
-				<h3>नासिकरोड घैसस दत्तमंदिर</h3>
-				<p><b>स्थान: </b> नाशिक रोड से 2. वो. मी., नासिक (महाराष्ट्र राज्य) </p>
-				<p><b>सतपुरुष: </b> श्री काकासाहेब घैसस </p>
-				<p><b>विशेष: </b>दत्ता मंदिर </p>
+				<h3>Nasikrod Ghaisas Dattamandir</h3>
+				<p><b>Location: </b> Nashik Road to 2. That. Me., Nashik (Maharashtra State) </p>
+				<p><b>Satpurush: </b> Shri Kakasaheb Ghaisas </p>
+				<p><b>Special: </b>Datta Mandir </p>
 				<div class='caption caption-img align-left data-img'>
 					<img alt='' src="https://raw.githubusercontent.com/onkar2498/JSON/master/images/Nashik/datta.jpg">
-					<figcaption class="figncaption">नासिक रोड घासस दत्ता मंदिर</figcaption>
+					<figcaption class="figncaption">Nashik Road Ghaisas Datta Temple</figcaption>
 				</div>
 
-				<p>नासिक रोड स्टेशन से 2. किलोमीटर दूर श्री. (सीए.) महादेवराव सदाशिव घैसस हयानी बांधलेले
-					दत्त मंदिर आहे। </p>
-				<p>सीए. काकासाहेब घैससांचा का जन्म वर्ष 1895 में कोलाबा के मेधे या गवी झाला जिले में हुआ था। वह
-					बचपन से ही श्रीदत्त की पूजा करना पसंद करते थे। वास्तव में श्री दत्त महाराज हमेशा उनके रहेंगे
-					शिष्य। शिक्षा की कमी के कारण, भगवान की भक्ति और आत्मविश्वास के कारण उन्हें एक नौकरी मिल गई
-					रेलवे में सात रुपये वेतन पर केबिन कैंडिडेट और सही जगह भी हासिल की
-					ब्रिटिश शासन। 1950 में आई.एस. ते 'असि. 'यातायात प्रबंधक' के पद से सेवानिवृत्त हुए। </p>
-				<p>सेवा करते हुए, उन्होंने श्रीदत्त की पूजा करना, श्रीदत्त के लिए वार्षिक उत्सव करना कभी नहीं छोड़ा।
-					नमूना
-					एक तुमदार मंदिर ऐसा हो, उन्हें ऐसा लगे। </p>
-				<p>नौकरी के लिए नासिक रोडला आने पर उन्होंने एक एकड़ जमीन खरीदी। वहां चार-पांच कमरे बन गए।
-					वहाँ रहकर चुपचाप श्रीदत्त की सेवा करना ही प्रयोजन होता। लेकिन जब वह उठा, तो अजीब लगा
-					अनुभव आने लगे। जोरजोरत दूर वजात, दगदांचे आवाज होता। यह की ध्वनि है
-					हँसी और मानवीय संकट; लेकिन वह व्यक्ति नजर नहीं आया। पूछताछ अंत में समझ में आया कि,
-					कोई सुदूर पूर्वी श्मशान भूमि रही होगी; इसलिए काकासाहेब ने जगा छोड़ने का निश्चय किया।
-					लेकिन उसी रात उन्हें एक दर्शन हुआ। श्री दत्त महाराज स्वयं स्वप्न में आये और सांगून चले गये,
-					'हाय जगा सोडू नाकोस। उस व्यक्ति का उद्धार आपके हाथ में होगा। और दोनों ही जगहों पर
-					ऑडुम्ब्राचे का पेड़ लगाओ।' </p>
-				<p>आज्ञा के अनुसार काकासाहेबनी के दो पेड़ प्यारे हैं। इन तीन वृक्षों की सहायता से, सभी
-					मुसीबतें बंद हो गईं। उस स्थान पर प्रसन्नता का अनुभव करने लगे। नाइट स्टैंड की आवाजें, साथ ही साथ
-					रोशनी की गंध। कुछ दिनों के लिए दृष्टान्त बन गया, 'औदुम्बरशेजरी माजे मंदिर बांध।'</p>
-				<p>काकासाहेबन्नी हि सुधा देवाची अजना अमलत अनलि। मंदिर बन गया, लेकिन सवाल दत्त का
-					मूर्ति उठी। देने के लिए भी चिंता तुरंत गायब हो गई। लगभग उसी समय, श्री नारायण
-					महाराज (केदगांव) त्र्यंबकेश्वर के दर्शन के लिए नासिकला आते थे। उन्होंने और काकासाहेब ने ए
-					संकट। जब वह मंदिर बनाने के लिए तैयार हुआ, लेकिन दत्त की मूर्ति रह गई, तो उसने कहा, 'मैंने बनाया था
-					आपको मेरे सपने में दत्ता की मूर्ति देने का आदेश दिया।' इसकी स्थापना वर्ष 1940 में श्रीदत्त पर हुई थी
-					जयंती। उसी समय से श्रीदत्त जयंती का उत्सव शुरू हो गया। यह उत्सव तीन दिनों तक चलता है
-					दिन। श्रीदत्तपूजा, श्री सत्यदत्तपूजा, लघुरुद्र, श्रीदत्तजन्म, पालकीसोहला जैसे कार्यक्रम हैं
-					तीन दिनों के लिए आयोजित किया गया। </p>
-				<p>उत्सव शुरू होने के बाद, श्री दत्तो की पूजा उनके मन में अधिक दृढ़ता से निवास करने लगी
-					इससे पहले। इसका परिणाम यह हुआ कि प्रत्येक गुरुवार को महादेवराव के अंगत के अवसर पर
-					दत्त जयंती के अवसर पर दत्त का संचार प्रारंभ हुआ। जबकि जुनून की ऐसी स्थिति में, वह
-					कई भूतिया बाधाओं और पीड़ाओं को दूर किया। रोज शाम और सुबह भजन बासत करें और पूजा करें
-					श्रीदत्त। एकतारी को हाथ में लिए मूर्ति के सामने खड़े श्रीदत्त के भजन में मग्न थे
-					एकतारी के राग में। 20 नवंबर 1955 रोज़ी आशाच एक पहते ओ दत्ता भक्त, श्रीदत्तची भूपाली
-					मान्यता रंगून गेल असांतच अचानक कार्डियक अरेस्ट पड़ून दत्तमंदिरत श्रीदत्तचारणी विलेन
-					झाले। </p>
+				<p>From Nashik Road Station 2. kilometers away Mr. (Ca.) Mahadevrao Sadashiv Ghaisas Hayani Bandhalele
+					Dutt Mandir Aahe. </p>
+				<p>Ca. Kakasaheb Ghaisasancha was born in the year 1895 in Medhe or Gavi Jhala district of Colaba. He
+					used to love to worship Shridatta since childhood. In fact Shri Dutt Maharaj would always be his
+					disciple. Due to the lack of education, due to God's devotion and self-confidence, he got a job as a
+					cabin candidate in the railways for a salary of seven rupees and also got the rightful place in the
+					British rule. I. S. In 1950 Te 'Asi. Retired as 'Traffic Manager'. </p>
+				<p>While serving, he never stopped worshiping Shridatta, doing annual festivals for Shridatta. Swatche
+					ek Tumdar temple should be like it, they feel like it. </p>
+				<p>He bought an acre of land when he came to Nashik Rodla for a job. Four-five rooms were built there.
+					The purpose would have been to stay there and serve Shridatta quietly. But when he woke up, strange
+					experiences started coming. Jorajorat door wajat, dagdanche awaaz hota. This is the sound of
+					laughter and human distress; But the person was not visible. Inquiries finally understood that,
+					there would have been a far eastern cremation ground; That's why Kakasaheb decided to leave Jaga.
+					But the same night he had a vision. Shri Dutt Maharaj himself came in a dream and went to Sangoon,
+					'Hi Jaga Sodu Nakos. The salvation of that person will be in your hands. And at both the places,
+					plant the Audumbrache tree.' </p>
+				<p>According to the decree, Kakasahebani's two trees are lovely. With the help of these three trees, all
+					the troubles stopped. Started feeling happy at that place. The sounds of the night stand, as well as
+					the smell of the lights. For a few days the parable became, 'Audumbarashejari Maje Mandir Dam.'</p>
+				<p>Kakasahebanni hi suddha devachi ajna amlat anali. The temple was built, but the question of Datta's
+					idol arose. To give even the worry immediately disappeared. Around the same time, Shri Narayan
+					Maharaj (Kedgaon) used to come to Nasikala for the darshan of Trimbakeshwar. He and Kakasaheb had a
+					problem. When he got ready to build the temple, but the idol of Datta was left, he said, 'I had
+					ordered you to give the idol of Datta in my dream.' It was established in the year 1940 on Shridatta
+					Jayanti. From that time the celebration of Shridatta Jayanti started. This festival lasts for three
+					days. Shridattapuja, Shri Satyadattapuja, Laghurudra, Shridattajanma, Palkhisohla such programs are
+					held for three days. </p>
+				<p>After starting the festival, the worship of Shri Datto began to reside in his mind more strongly than
+					before. The result of this was such that, on the occasion of Mahadevrava's Angat every Thursday, on
+					the occasion of Datta Jayanti, Datta's communication started. While in such a state of passion, he
+					removed many ghostly obstacles and pains. Do bhajanas basat every evening and morning and worship
+					Shridatta. Holding Ektari in hand, standing in front of the idol, Shridatta's bhajan was engrossed
+					in the melody of Ektari. 20 Nov 1955 Rosi Ashach Eka Pahates O Datta Bhakt, Shridattachi Bhupali
+					Mananyata Rangoon Gayle Asantach sudden cardiac arrest Padoon Dattamandirat Shridattacharani Vilen
+					Jhale. </p>
 
-				<p><b>. दिगंबर दिगंबर श्रीपादवल्लभ दिगंबर।</b></p>
-				</div>
+				<p><b>. Digambara Digambara Shripadvallabh Digambara.</b></p>
+			</div>
 		</section>
 	</main>
 </body>
